chore(config): add auto creating fresh tables while creating jdbi bean